@@ -286,3 +286,4 @@ suggestions:
   Simon Michael
   Robin Green
   pawprint
+  Reg
